--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -42,10 +42,12 @@ label {
   margin: 0px;
   padding: 0px; }
 
-input[type="number"],
-input[type="text"] {
+input[type="number"], input[type="text"] {
   padding: 1px 2px;
-  width: 100%; }
+  width: 100% !important; }
+input[disabled='true'] {
+  background-color: #77be7924;
+  cursor: not-allowed; }
 
 select {
   margin: 0px;
@@ -63,6 +65,12 @@ textarea {
   text-align: left;
   vertical-align: top;
   white-space: pre-line; }
+
+select {
+  width: 100%; }
+
+.sheet-bold {
+  font-weight: bold; }
 
 div.sheet-grid {
   display: inline-grid;
@@ -154,7 +162,7 @@ div.sheet-container {
             width: 30px;
             margin-left: 33%; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid {
-            grid-template-columns: 2.5em 2.5em;
+            grid-template-columns: 1fr 1fr;
             grid-column-gap: 2%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input {
               border: 0.15em solid #bbb;
@@ -164,8 +172,10 @@ div.sheet-container {
               div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input[name*='bonus'] {
                 border-color: #00b300; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points {
-          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr;
+          grid-template-columns: 4fr 1fr 4fr 1fr 4fr 1fr;
           text-align: center; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points h3 {
+            font-size: 0.8em; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points input {
             text-align: center; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills {
@@ -213,42 +223,20 @@ div.sheet-container {
             grid-column: 1 / 3; }
 
 div.sheet-dice-box {
-  grid-template-columns: 1fr 1fr 1fr 1fr; }
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap: 2%; }
   div.sheet-dice-box button {
     grid-area: 1 / 1 / 1 / 5; }
-
-img.sheet-header {
-  height: 30px;
-  width: 200px; }
-
-div.sheet-biobox {
-  grid-template-columns: 8em 1fr; }
-
-div.sheet-pointsbox {
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly; }
-  div.sheet-pointsbox input.sheet-points {
-    height: 24px;
-    width: 26px; }
-
-div.sheet-attributebox {
-  grid-auto-rows: min-content; }
-  div.sheet-attributebox img {
-    width: 40px;
-    height: 40px; }
-  div.sheet-attributebox input.sheet-spewbonus {
-    border: 2px solid #00b300;
-    font-weight: bold;
-    text-align: center;
-    width: 28px;
-    font-size: 1.5em; }
-  div.sheet-attributebox input.sheet-spewones {
-    border: 2px solid lightgrey;
-    font-weight: bold;
-    text-align: center;
-    width: 28px;
-    font-size: 1.5em; }
+  div.sheet-dice-box img {
+    left: 10px;
+    margin-left: -5%;
+    position: relative;
+    top: 0px;
+    z-index: +1; }
+  div.sheet-dice-box select {
+    width: 65%; }
+  div.sheet-dice-box span[data-i18n='d5!'] {
+    margin-right: -10%; }
 
 div.sheet-skilllabel {
   background-image: url("https://i.imgur.com/lPWJPdo.png");
@@ -291,6 +279,41 @@ div.sheet-dicelabel {
     font-size: 1.5em;
     font-family: "Pictos"; }
 
+div.sheet-health h1, div.sheet-health h2 {
+  text-align: center; }
+div.sheet-health div.sheet-header {
+  grid-template-columns: 1em 2fr 1fr;
+  text-align: center; }
+  div.sheet-health div.sheet-header h2[data-i18n='Injuries'] {
+    grid-column: 2; }
+  div.sheet-health div.sheet-header h2[data-i18n='Damage Threshold'] {
+    grid-column: 3;
+    line-height: inherit; }
+div.sheet-health div.sheet-body {
+  grid-template-columns: 1em 2fr 1fr; }
+  div.sheet-health div.sheet-body h3 {
+    font-size: 0.8em;
+    line-height: inherit;
+    text-align: center; }
+    div.sheet-health div.sheet-body h3[data-i18n='Health Points'] {
+      text-orientation: mixed;
+      transform: rotate(180deg);
+      writing-mode: vertical-rl; }
+  div.sheet-health div.sheet-body div.sheet-injuries {
+    grid-template-columns: 15px 1fr;
+    grid-column-gap: 0.5%; }
+    div.sheet-health div.sheet-body div.sheet-injuries input[type='checkbox'] {
+      height: 15px;
+      width: 15px; }
+    div.sheet-health div.sheet-body div.sheet-injuries input[type='text'] {
+      margin-bottom: 2%; }
+  div.sheet-health div.sheet-body div.sheet-damage-threshold h3[data-i18n='Sb + Wb'] {
+    grid-area: 1 / 1 / 1 / 3; }
+  div.sheet-health div.sheet-body div.sheet-damage-threshold h3[data-i18n='Bonus'] {
+    grid-column: 1 / 4 / 1 / 4; }
+  div.sheet-health div.sheet-body div.sheet-damage-threshold input {
+    text-align: center; }
+
 div.sheet-tab {
   display: none; }
 
@@ -303,47 +326,138 @@ input[name='attr_tab'][value='equipment'] ~ div.sheet-equipment {
 input[name='attr_tab'][value='log'] ~ div.sheet-log {
   display: inline-block; }
 
-/* ROLL TEMPLATE
-============================= */
-.sheet-rolltemplate-rolls .sheet-template-body {
-  border: 1px solid #000;
-  text-align: center; }
-
-.sheet-rolltemplate-rolls .sheet-template-header {
-  background: #210000;
-  background: linear-gradient(180deg, #210000 0%, #890b0d 70%, #d5191f 94%);
-  border: 1px solid #000;
-  border-bottom: 2px solid #000;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  color: white;
-  font-size: 20px;
-  font-variant: small-caps;
+.sheet-rolltemplate-ou table {
+  width: 189px;
+  height: 186px;
+  padding: 2px;
+  background: url(https://i.imgur.com/Hr4tcMB.png) top left;
+  /*Post-it note image*/
+  background-size: 189px 186px;
+  background-repeat: no-repeat;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
-  letter-spacing: 2px;
-  padding: 5px;
+  border-spacing: 0; }
+
+.sheet-rolltemplate-ou-small table {
+  width: 189px;
+  height: 186px;
+  padding: 4px;
+  background: url(https://i.imgur.com/SSQm0oc.png) top left;
+  /*note image*/
+  background-size: 189px 186px;
+  background-repeat: no-repeat;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  border-spacing: 0; }
+
+.sheet-rolltemplate-ou th {
+  color: #145a32;
+  padding: 10px 2px 2px 20px;
+  line-height: 1.2em;
+  font-size: 1.2em;
+  text-align: left; }
+
+.sheet-rolltemplate-ou td,
+.sheet-rolltemplate-ou-small td {
+  padding-left: 10px;
+  font-size: 1.0em;
+  vertical-align: top; }
+
+.sheet-rolltemplate-ou .sheet-resultr {
+  font-size: 1.5em;
+  font-family: 'Pictos';
   text-align: center;
-  text-transform: capitalize; }
+  color: #C0392B;
+  /*color: rgb(20, 90, 50);*/
+  padding-bottom: 15px; }
 
-.sheet-rolltemplate-rolls .sheet-template-row {
-  background-color: white;
-  padding: 5px; }
+.sheet-rolltemplate-ou .sheet-resultg {
+  font-size: 1.5em;
+  font-family: 'Pictos';
+  text-align: center;
+  color: #28B463;
+  /*color: rgb(20, 90, 50);*/
+  padding-bottom: 15px; }
 
-/* Use this to alternate the background colors for each row */
-.sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {
-  background-color: #1c1c1c; }
-
-/* Remove some fo the built in styles around rolls */
-.sheet-rolltemplate-rolls .inlinerollresult,
-.sheet-rolltemplate-rolls .inlinerollresult.importantroll,
-.sheet-rolltemplate-rolls .inlinerollresult.fullfail,
-.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
+.sheet-rolltemplate-ou .inlinerollresult {
   background-color: transparent;
-  border: none;
+  color: #000000;
+  border: none; }
+
+.sheet-rolltemplate-ou .inlinerollresult.fullcrit {
+  background-color: #28B463;
+  color: #ffffff;
+  border: none; }
+
+.sheet-rolltemplate-ou .inlinerollresult.fullfail {
+  background-color: #C0392B;
+  color: #ffffff;
+  border: none; }
+
+.sheet-rolltemplate-ou .sheet-res .inlinerollresult.fullcrit,
+.sheet-rolltemplate-ou .sheet-res .inlinerollresult.fullfail {
+  background-color: transparent;
   color: black;
-  display: inline-block;
-  font-size: 25px;
-  padding: 5px; }
+  border: black; }
+
+.sheet-rolltemplate-ou-small .sheet-diff .inlinerollresult,
+.sheet-rolltemplate-ou .sheet-diff .inlinerollresult {
+  background-color: #000000;
+  color: #ffffff;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  border: none; }
+
+.sheet-rolltemplate-ou-small .sheet-speed .inlinerollresult,
+.sheet-rolltemplate-ou .sheet-speed .inlinerollresult {
+  background-color: #104ac9;
+  color: #ffffff;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  border: none; }
+
+.sheet-rolltemplate-ou-small .sheet-damage .inlinerollresult,
+.sheet-rolltemplate-ou .sheet-damage .inlinerollresult {
+  background-color: #ce3c2d;
+  color: #ffffff;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  border: none; }
+
+.sheet-rolltemplate-ou-small .sheet-deplete .inlinerollresult,
+.sheet-rolltemplate-ou .sheet-deplete .inlinerollresult {
+  background-color: #ffffff;
+  color: #000000;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  border: none; }
+
+.sheet-rolltemplate-ou-small .sheet-speed-five .inlinerollresult.fullcrit,
+.sheet-rolltemplate-ou .sheet-speed-five .inlinerollresult.fullcrit {
+  background: url(https://i.imgur.com/QIhFKV7.jpg) bottom;
+  background-size: 19px 19px;
+  background-repeat: no-repeat;
+  z-index: +1;
+  font-size: 1.2em;
+  color: transparent; }
+
+.sheet-rolltemplate-ou-small .sheet-damage-five .inlinerollresult.fullcrit,
+.sheet-rolltemplate-ou .sheet-damage-five .inlinerollresult.fullcrit {
+  background: url(https://i.imgur.com/EkBzVOm.jpg) bottom;
+  background-size: 19px 19px;
+  background-repeat: no-repeat;
+  z-index: +1;
+  font-size: 1.2em;
+  color: transparent; }
+
+.sheet-rolltemplate-ou-small .sheet-deplete-five .inlinerollresult.fullcrit,
+.sheet-rolltemplate-ou .sheet-deplete-five .inlinerollresult.fullcrit {
+  background: url(https://i.imgur.com/EvcDFYc.jpg) bottom;
+  background-size: 19px 19px;
+  background-repeat: no-repeat;
+  z-index: +1;
+  font-size: 1.2em;
+  color: transparent; }
 
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
