--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -9,6 +9,10 @@
 //=============================
 @import "src/scss/_global";
 
+.sheet-bold {
+  font-weight: bold;
+}
+
 div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
@@ -141,7 +145,7 @@ div.sheet-container {
 
           div.sheet-attributes {
             div.sheet-grid {
-              grid-template-columns: 2.5em 2.5em;
+              grid-template-columns: 1fr 1fr;
               grid-column-gap: 2%;
 
               input {
@@ -159,8 +163,12 @@ div.sheet-container {
         }
 
         div.sheet-points {
-          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr;
+          grid-template-columns: 4fr 1fr 4fr 1fr 4fr 1fr;
           text-align: center;
+
+          h3 {
+            font-size: 0.8em;
+          }
 
           input {
             text-align: center;
@@ -253,54 +261,28 @@ div.sheet-container {
 
 div.sheet-dice-box {
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap: 2%;
 
   button {
     grid-area: 1 / 1 / 1 / 5;
   }
+
+  img {
+    left: 10px;
+    margin-left: -5%;
+    position: relative;
+    top: 0px;
+    z-index: +1;
+  }
+
+  select {
+    width: 65%;
+  }
+
+  span[data-i18n='d5!'] {
+    margin-right: -10%;
+  }
 }
-
-  img.sheet-header {
-    height: 30px;
-    width: 200px;
-  }
-
-  div.sheet-biobox {
-    grid-template-columns: 8em 1fr;
-  }
-
-  div.sheet-pointsbox {
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-    input.sheet-points {
-      height: 24px;
-      width: 26px;
-    }
-  }
-
-  div.sheet-attributebox {
-    grid-auto-rows: min-content;
-    img {
-      width: 40px;
-      height: 40px;
-    }
-
-    input.sheet-spewbonus {
-      border: 2px solid #00b300;
-      font-weight: bold;
-      text-align: center;
-      width: 28px;
-      font-size: 1.5em;
-    }
-
-    input.sheet-spewones {
-      border: 2px solid lightgrey;
-      font-weight: bold;
-      text-align: center;
-      width: 28px;
-      font-size: 1.5em;
-    }
-  }
 
   div.sheet-skilllabel {
     background-image: url("https://i.imgur.com/lPWJPdo.png");
@@ -353,6 +335,70 @@ div.sheet-dice-box {
       font-family: "Pictos";
     }
   }
+
+div.sheet-health {
+  h1, h2 {
+    text-align: center;
+  }
+
+  div.sheet-header {
+    grid-template-columns: 1em 2fr 1fr;
+    text-align: center;
+
+    h2[data-i18n='Injuries'] {
+      grid-column: 2;
+    }
+
+    h2[data-i18n='Damage Threshold'] {
+      grid-column: 3;
+      line-height: inherit;
+    }
+  }
+
+  div.sheet-body {
+    grid-template-columns: 1em 2fr 1fr;
+
+    h3 {
+      font-size: 0.8em;
+      line-height: inherit;
+      text-align: center;
+
+      &[data-i18n='Health Points'] {
+        text-orientation: mixed;
+        transform: rotate(180deg);
+        writing-mode: vertical-rl;
+      }
+    }
+
+    div.sheet-injuries {
+      grid-template-columns: 15px 1fr;
+      grid-column-gap: 0.5%;
+
+      input[type='checkbox'] {
+        height: 15px;
+        width: 15px;
+      }
+
+      input[type='text'] {
+        margin-bottom: 2%;
+      }
+    }
+
+    div.sheet-damage-threshold {
+      h3[data-i18n='Sb + Wb'] {
+        grid-area: 1 / 1 / 1 / 3;
+      }
+
+      h3[data-i18n='Bonus'] {
+        grid-column: 1 / 4 / 1 / 4;
+      }
+
+      input {
+        text-align: center;
+      }
+    }
+  }
+}
 
 // HIDDEN SECTIONS
 //=============================
