--- a/Outbreak/src/scss/_global.scss
+++ b/Outbreak/src/scss/_global.scss
@@ -66,10 +66,17 @@ label {
   padding: 0px;
 }
 
-input[type="number"],
-input[type="text"] {
-  padding: 1px 2px;
-  width: 100%;
+input {
+  &[type="number"],
+  &[type="text"] {
+    padding: 1px 2px;
+    width: 100% !important;
+  }
+
+  &[disabled='true'] {
+    background-color: #77be7924;
+    cursor: not-allowed;
+  }
 }
 
 select {
@@ -89,4 +96,8 @@ textarea {
   text-align: left;
   vertical-align: top;
   white-space: pre-line;
+}
+
+select {
+  width: 100%;
 }
