finished to Psyche

--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -148,15 +148,40 @@ include src/pug/_mixins.pug
 								input(name='attr_damage_treshold_base' type="number" value="(@{strength_bonus}+@{willpower_bonus})" disabled="true")
 							.row
 								h3(data-i18n='Bonus') Bonus
-								input(name='attr_damage_threshold_bonus' type='number' value='')
+								input(name='attr_damage_threshold_bonus' type='number' value='0')
 							.row
 								h3(data-i18n='Total') Total
 								input(name='attr_damage_threshold' type='number' value='(@{strength_bonus}+@{willpower_bonus}+@{damage_threshold_bonus})' disabled="true")
 
-				h1.yellow-header(data-i18n='Viral') Viral
+				.grid.viral
+					h1.yellow-header(data-i18n='Viral') Viral
+					.virus-checkboxes
+						- let v = 0;
+						while v < 10
+							- v++
+							input(name=`attr_viral_${v}` value=v type='checkbox')
+							span
+					h2(data-i18n='Symptoms') Symptoms
+					textarea(name='attr_symptoms')
 
-				h1.yellow-header(data-i18n='Psyche') Psyche
+				.grid.pysche
+					h1.yellow-header(data-i18n='Psyche') Psyche
+					h2(data-i18n='Wb + Eb') Wb + Eb
+					h2(data-i18n='Bonus') Bonus
+					h2(data-i18n='Total') Total
 
+					h2(data-i18n='Morale') Morale
+					input(name='attr_morale_base' type='number' value="(@{willpower_bonus}+@{empathy_bonus})" disabled="true")
+					span +
+					input(name='attr_morale_bonus' type='number' value="0")
+					span =
+					input(name='attr_morale' type='number' value="(@{morale_base}+@{morale_bonus})" disabled="true")
+
+					h2(data-i18n='Coping Mechanisms') Coping Mechanisms
+					textarea(name='attr_coping_mechanisms')
+
+			.grid.box.training-value
+				h1.green-header(data-i18n='Training Value Bonus') Training Value Bonus
 
 	.equipment.tab
 
