--- a/Outbreak/src/scss/_global.scss
+++ b/Outbreak/src/scss/_global.scss
@@ -87,8 +87,9 @@ select {
 textarea {
   font-size: 1.1em;
   font-weight: normal;
+  height: 50px;
   line-height: 1.5em;
-  min-height: 150px;
+  min-height: 50px;
   overflow-wrap: break-word;
   overflow: scroll;
   padding: 2px;
