--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -56,8 +56,9 @@ select {
 textarea {
   font-size: 1.1em;
   font-weight: normal;
+  height: 50px;
   line-height: 1.5em;
-  min-height: 150px;
+  min-height: 50px;
   overflow-wrap: break-word;
   overflow: scroll;
   padding: 2px;
@@ -313,6 +314,57 @@ div.sheet-health div.sheet-body {
     grid-column: 1 / 4 / 1 / 4; }
   div.sheet-health div.sheet-body div.sheet-damage-threshold input {
     text-align: center; }
+div.sheet-health div.sheet-viral h2[data-i18n='Symptoms'] {
+  text-align: left; }
+div.sheet-health div.sheet-viral input[type="checkbox"] {
+  -webkit-appearance: initial;
+  appearance: initial;
+  background: none;
+  border: 1px solid black;
+  height: 19px;
+  margin-right: -8px;
+  position: relative;
+  width: 19px; }
+  div.sheet-health div.sheet-viral input[type="checkbox"]:checked {
+    background: #ccff33;
+    content: url(https://i.imgur.com/WcF3c39.png);
+    border: none; }
+    div.sheet-health div.sheet-viral input[type="checkbox"]:checked:after {
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+div.sheet-health div.sheet-viral div.sheet-virus-checkboxes {
+  display: inline;
+  margin-left: 15%; }
+div.sheet-health div.sheet-pysche {
+  grid-template-columns: 4fr 3fr 1fr 2fr 1fr 3fr; }
+  div.sheet-health div.sheet-pysche h1 {
+    grid-area: 1 / 1 / 1 / 7; }
+  div.sheet-health div.sheet-pysche h2[data-i18n='Wb + Eb'] {
+    grid-area: 2 / 2 / 2 / 2; }
+  div.sheet-health div.sheet-pysche h2[data-i18n='Bonus'] {
+    grid-area: 2 / 4 / 2 / 4; }
+  div.sheet-health div.sheet-pysche h2[data-i18n='Total'] {
+    grid-area: 2 / 6 / 2 / 6; }
+  div.sheet-health div.sheet-pysche h2[data-i18n='Coping Mechanisms'] {
+    grid-area: 4 / 1 / 4 / 7;
+    text-align: left; }
+  div.sheet-health div.sheet-pysche h2[data-i18n='Morale'] {
+    grid-area: 3 / 1 / 3 / 1;
+    line-height: inherit; }
+  div.sheet-health div.sheet-pysche input[type='number'] {
+    grid-row: 3;
+    text-align: center; }
+  div.sheet-health div.sheet-pysche span {
+    grid-row: 3;
+    margin-top: 40%;
+    text-align: center; }
+  div.sheet-health div.sheet-pysche textarea {
+    grid-area: 5 / 1 / 5 / 7; }
 
 div.sheet-tab {
   display: none; }
