--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -398,6 +398,91 @@ div.sheet-health {
       }
     }
   }
+
+  div.sheet-viral {
+    h2[data-i18n='Symptoms'] {
+      text-align: left;
+    }
+
+    input[type="checkbox"] {
+      -webkit-appearance: initial;
+      appearance: initial;
+      background: none;
+      border: 1px solid black;
+      height: 19px;
+      margin-right: -8px;
+      position: relative;
+      width: 19px;
+
+      &:checked {
+        background: #ccff33;
+        content: url(https://i.imgur.com/WcF3c39.png);
+        border: none;
+
+        &:after {
+          -moz-transform: translate(-50%,-50%);
+          -ms-transform: translate(-50%,-50%);
+          -webkit-transform: translate(-50%,-50%);
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          transform: translate(-50%,-50%);
+        }
+      }
+    }
+
+    div.sheet-virus-checkboxes {
+      display: inline;
+      margin-left: 15%;
+    }
+  }
+
+  div.sheet-pysche {
+    grid-template-columns: 4fr 3fr 1fr 2fr 1fr 3fr;
+
+    h1 {
+      grid-area: 1 / 1 / 1 / 7;
+    }
+
+    h2 {
+      &[data-i18n='Wb + Eb'] {
+        grid-area: 2 / 2 / 2 / 2;
+      }
+
+      &[data-i18n='Bonus'] {
+        grid-area: 2 / 4 / 2 / 4;
+      }
+
+     &[data-i18n='Total'] {
+        grid-area: 2 / 6 / 2 / 6;
+      }
+
+      &[data-i18n='Coping Mechanisms'] {
+        grid-area: 4 / 1 / 4 / 7;
+        text-align: left;
+      }
+    }
+
+    h2[data-i18n='Morale'] {
+      grid-area: 3 / 1 / 3 / 1;
+      line-height: inherit;
+    }
+
+    input[type='number'] {
+      grid-row: 3;
+      text-align: center;
+    }
+
+    span {
+      grid-row: 3;
+      margin-top: 40%;
+      text-align: center;
+    }
+
+    textarea {
+      grid-area: 5 / 1 / 5 / 7;
+    }
+  }
 }
 
 // HIDDEN SECTIONS
