--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -7,7 +7,7 @@ input(name='attr_version' type='hidden' value='1')
 include src/pug/_mixins.pug
 
 .grid.navigation
-	each val in ['Main', 'Equipment', 'Log']
+	each val in ['Main', 'Equipment']
 		if val === 'main'
 			input(name='attr_tab' type='radio' value=val.toLowerCase() checked)
 		else
@@ -185,7 +185,6 @@ include src/pug/_mixins.pug
 
 	.equipment.tab
 
-	.log.tab
 
 //- ROLL TEMPLATE
 include src/pug/rolltemplate.html
