added bond template

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -199,6 +199,27 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     align-items: center;
 }
 
+div.sheet-momentum-burn {
+    display: flex;
+}
+
+label.sheet-momentum-burn:hover {
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #ccc;
+    color: black;
+}
+
+label.sheet-momentum-burn {
+    border-radius: 4px;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 0.2em 0.9em 0.2em 0.9em;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    font-size: 14px;
+}
+
 .sheet-bonds {
     margin-bottom: 0px;
 }
