--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -136,9 +136,9 @@ div.sheet-container {
       display: inline-block;
       vertical-align: top; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
-        width: 60%; }
+        width: 58%; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(2) {
-        width: 39%; }
+        width: 41%; }
       div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo {
         grid-template-columns: 20% 1fr; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo h2 {
@@ -365,6 +365,26 @@ div.sheet-health div.sheet-pysche {
     text-align: center; }
   div.sheet-health div.sheet-pysche textarea {
     grid-area: 5 / 1 / 5 / 7; }
+
+div.sheet-training-value h1 {
+  grid-column: 1 / 2;
+  font-size: 1.8em;
+  text-align: center; }
+div.sheet-training-value div.sheet-red-kits {
+  grid-template-columns: 1fr 1fr; }
+div.sheet-training-value div.sheet-green-kits {
+  grid-template-columns: 1fr 1fr 1fr; }
+div.sheet-training-value div.sheet-kits {
+  margin-bottom: 5%; }
+  div.sheet-training-value div.sheet-kits h2 {
+    text-align: center;
+    line-height: inherit; }
+  div.sheet-training-value div.sheet-kits input {
+    height: 2.3em;
+    width: 4em !important; }
+  div.sheet-training-value div.sheet-kits img {
+    margin-left: 25%;
+    margin-right: -5%; }
 
 div.sheet-tab {
   display: none; }
