--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -97,11 +97,11 @@ div.sheet-container {
       vertical-align: top;
 
       &:nth-of-type(1) {
-        width: 60%;
+        width: 58%;
       }
 
       &:nth-of-type(2) {
-        width: 39%;
+        width: 41%;
       }
 
       div.sheet-playerinfo {
@@ -481,6 +481,42 @@ div.sheet-health {
 
     textarea {
       grid-area: 5 / 1 / 5 / 7;
+    }
+  }
+}
+
+div.sheet-training-value {
+
+  h1 {
+    grid-column: 1 / 2;
+    font-size: 1.8em;
+    text-align: center;
+  }
+
+  div.sheet-red-kits {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  div.sheet-green-kits {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  div.sheet-kits {
+    margin-bottom: 5%;
+
+    h2 {
+      text-align: center;
+      line-height: inherit;
+    }
+
+    input {
+      height: 2.3em;
+      width: 4em !important;
+    }
+
+    img {
+      margin-left: 25%;
+      margin-right: -5%;
     }
   }
 }
