--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -183,7 +183,22 @@ include src/pug/_mixins.pug
 			.grid.box.training-value
 				h1.green-header(data-i18n='Training Value Bonus') Training Value Bonus
 
-	.equipment.tab
+				.grid.red-kits
+					each val in ['Archery Gear', 'Long Gun', 'Bludgeoning', 'Pistol', 'Piercing', 'Throwing', 'Slashing', 'Martial Arts']
+						-const name = val.replace(' ', '').toLowerCase();
+						.kits
+							h2(data-i18n=`${val}`) #{val}
+							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
+							input(name=`attr_${name}` type='number' value='')
+
+				.grid.green-kits
+					each val in ['Athletic Gear', 'First Aid Kits', 'Swimming/Diving', 'Climbing Gear', 'Medical Gear', 'Tools', 'Climbing Gear', 'Medical Gear', 'Tools', 'Command App', 'Recon Gear', 'Value', 'Firefighting', 'Survival Kit', 'Vehicles']
+						-const name = val.replace(' ', '').replace('/', '_').toLowerCase();
+						.kits
+							h2(data-i18n=`${val}`) #{val}
+							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
+							input(name=`attr_${name}` type='number' value='')
+		.equipment.tab
 
 
 //- ROLL TEMPLATE
