fix swiming icon

--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -185,7 +185,7 @@ include src/pug/_mixins.pug
 
 				.grid.red-kits
 					each val in ['Archery Gear', 'Long Gun', 'Bludgeoning', 'Pistol', 'Piercing', 'Throwing', 'Slashing', 'Martial Arts']
-						-const name = val.replace(' ', '').toLowerCase();
+						-const name = val.replace(' ', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
 							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
@@ -193,10 +193,10 @@ include src/pug/_mixins.pug
 
 				.grid.green-kits
 					each val in ['Athletic Gear', 'First Aid Kits', 'Swimming/Diving', 'Climbing Gear', 'Medical Gear', 'Tools', 'Climbing Gear', 'Medical Gear', 'Tools', 'Command App', 'Recon Gear', 'Value', 'Firefighting', 'Survival Kit', 'Vehicles']
-						-const name = val.replace(' ', '').replace('/', '_').toLowerCase();
+						-const name = val.replace(/ /g, '_').replace('/', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
-							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
+							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
 							input(name=`attr_${name}` type='number' value='')
 		.equipment.tab
 
