saving progress. finished kits

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -136,9 +136,9 @@ div.sheet-container {
       display: inline-block;
       vertical-align: top; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
-        width: 58%; }
+        width: 59%; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(2) {
-        width: 41%; }
+        width: 40%; }
       div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo {
         grid-template-columns: 20% 1fr; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo h2 {
@@ -372,8 +372,16 @@ div.sheet-training-value h1 {
   text-align: center; }
 div.sheet-training-value div.sheet-red-kits {
   grid-template-columns: 1fr 1fr; }
+  div.sheet-training-value div.sheet-red-kits img {
+    margin-left: 25%;
+    margin-right: -5%; }
 div.sheet-training-value div.sheet-green-kits {
   grid-template-columns: 1fr 1fr 1fr; }
+  div.sheet-training-value div.sheet-green-kits h2 {
+    font-size: 0.8em; }
+  div.sheet-training-value div.sheet-green-kits img {
+    margin-left: 25%;
+    margin-right: -5%; }
 div.sheet-training-value div.sheet-kits {
   margin-bottom: 5%; }
   div.sheet-training-value div.sheet-kits h2 {
@@ -381,11 +389,10 @@ div.sheet-training-value div.sheet-kits {
     line-height: inherit; }
   div.sheet-training-value div.sheet-kits input {
     height: 2.3em;
-    width: 4em !important; }
-  div.sheet-training-value div.sheet-kits img {
-    margin-left: 25%;
-    margin-right: -5%; }
+    text-align: center;
+    width: 3em !important; }
 
+KitIcons_SwimmingDiving_30x30.png
 div.sheet-tab {
   display: none; }
 
