--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -97,11 +97,11 @@ div.sheet-container {
       vertical-align: top;
 
       &:nth-of-type(1) {
-        width: 58%;
+        width: 59%;
       }
 
       &:nth-of-type(2) {
-        width: 41%;
+        width: 40%;
       }
 
       div.sheet-playerinfo {
@@ -495,10 +495,24 @@ div.sheet-training-value {
 
   div.sheet-red-kits {
     grid-template-columns: 1fr 1fr;
+
+    img {
+      margin-left: 25%;
+      margin-right: -5%;
+    }
   }
 
   div.sheet-green-kits {
     grid-template-columns: 1fr 1fr 1fr;
+
+    h2 {
+      font-size: 0.8em;
+    }
+
+    img {
+      margin-left: 25%;
+      margin-right: -5%;
+    }
   }
 
   div.sheet-kits {
@@ -511,15 +525,13 @@ div.sheet-training-value {
 
     input {
       height: 2.3em;
-      width: 4em !important;
-    }
-
-    img {
-      margin-left: 25%;
-      margin-right: -5%;
+      text-align: center;
+      width: 3em !important;
     }
   }
 }
+
+KitIcons_SwimmingDiving_30x30.png
 
 // HIDDEN SECTIONS
 //=============================
