--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -83,7 +83,7 @@ include src/pug/_mixins.pug
 							+skillList(key, val[0], val[1])
 					.skill-column.repeating-container
 						.fieldset(class='repeating_skills')
-							input(name=`attr_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{ArchTv}+@{${primaryAttribute}_bonus}|Athletic Gear, @{AthlTv}+@{${primaryAttribute}_bonus}|Bludgeon, @{BludTv}+@{${primaryAttribute}_bonus}|Climbing Gear, @{ClimTv}+@{${primaryAttribute}_bonus}|Command Apparatus, @{CommTv}+@{${primaryAttribute}_bonus}|Firefighting, @{FireTv}+@{${primaryAttribute}_bonus}|First Aid Kit, @{FirsTv}+@{${primaryAttribute}_bonus}|Long Gun, @{LngGnTv}+@{${primaryAttribute}_bonus}|Martial Arts, @{MtlArtTv}+@{${primaryAttribute}_bonus}|Medical Gear, @{MediTv}+@{${primaryAttribute}_bonus}|Piercing, @{PierTv}+@{${primaryAttribute}_bonus}|Pistol, @{PistTv}+@{${primaryAttribute}_bonus}|Recon Gear, @{RecoTv}+@{${primaryAttribute}_bonus}|Slashing, @{SlashTv}+@{${primaryAttribute}_bonus}|Survival Kit, @{SurvTv}+@{${primaryAttribute}_bonus}|Swimming/Diving, @{SwimTv}+@{${primaryAttribute}_bonus}|Throwing, @{ThrowTv}+@{${primaryAttribute}_bonus}|Tools, @{ToolTv}+@{${primaryAttribute}_bonus}|Value, @{ValuTv}+@{${primaryAttribute}_bonus}|Vehicles, @{VehiTv}+@{${primaryAttribute}_bonus}})*?{Multiplier|1|2|3|4|5}]]`)
+							input(name=`attr_button_base` type='hidden' value=`[[[(?{Gear Or Kit| None, 0 | Archery, @{archery_gear}+@{${primaryAttribute}_bonus}|Athletic Gear, @{athletic_gear}+@{${primaryAttribute}_bonus}|Bludgeon, @{bludgeoning}+@{${primaryAttribute}_bonus}|Climbing Gear, @{climbing_gear}+@{${primaryAttribute}_bonus}|Command Apparatus, @{command_app}+@{${primaryAttribute}_bonus}|Firefighting, @{firefighting}+@{${primaryAttribute}_bonus}|First Aid Kit, @{first_aid_kits}+@{${primaryAttribute}_bonus}|Long Gun, @{long_gun}+@{${primaryAttribute}_bonus}|Martial Arts, @{martial_arts}+@{${primaryAttribute}_bonus}|Medical Gear, @{medical_gear}+@{${primaryAttribute}_bonus}|Piercing, @{piercing}+@{${primaryAttribute}_bonus}|Pistol, @{pistol}+@{${primaryAttribute}_bonus}|Recon Gear, @{recon_gear}+@{${primaryAttribute}_bonus}|Slashing, @{slashing}+@{${primaryAttribute}_bonus}|Survival Kit, @{survival_kit}+@{${primaryAttribute}_bonus}|Swimming/Diving, @{swimming_diving}+@{${primaryAttribute}_bonus}|Throwing, @{throwing}+@{${primaryAttribute}_bonus}|Tools, @{tools}+@{${primaryAttribute}_bonus}|Value, @{value}+@{${primaryAttribute}_bonus}|Vehicles, @{vehicles}+@{${primaryAttribute}_bonus}})*?{Multiplier|1|2|3|4|5}]]`)
 
 							input(name=`attr_attributes` type='hidden' value=`(@{${primaryAttribute}}+@{${secondaryAttribute}_bonus})`)
 							input(name=`attr_total` type='hidden' value=`(@{skill} [Skill]+@{button_base} [Kit])`)
@@ -192,7 +192,7 @@ include src/pug/_mixins.pug
 							input(name=`attr_${name}` type='number' value='')
 
 				.grid.green-kits
-					each val in ['Athletic Gear', 'First Aid Kits', 'Swimming/Diving', 'Climbing Gear', 'Medical Gear', 'Tools', 'Climbing Gear', 'Medical Gear', 'Tools', 'Command App', 'Recon Gear', 'Value', 'Firefighting', 'Survival Kit', 'Vehicles']
+					each val in ['Athletic Gear', 'First Aid Kits', 'Swimming/Diving', 'Climbing Gear', 'Medical Gear', 'Tools', 'Command App', 'Recon Gear', 'Value', 'Firefighting', 'Survival Kit', 'Vehicles']
 						-const name = val.replace(/ /g, '_').replace('/', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
