--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -122,7 +122,8 @@ hr {
 input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
 input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
 input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
-input[type=radio].sheet-page4:checked ~ div.sheet-page4tab {
+input[type=radio].sheet-page4:checked ~ div.sheet-page4tab
+{
     display: block;
 }
 
@@ -132,23 +133,70 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     padding: 2px 4px;
 }
 
-.sheet-vow-clear-label {
-    border: 1px solid #ccc;
-    margin-right: 11px;
+input.sheet-pages {
+    opacity: 0;
+    cursor: pointer;  
 }
 
-.sheet-pages:checked + .sheet-page-label {
+input.sheet-clear-vow {
+    opacity: 0;
+    width: 54px;
+    margin-right: 22px;
+    cursor: pointer;  
+}
+
+.sheet-vow-clear-label {
+    border: 1px solid #ccc;
+    margin-left: -80px;
+    width: 80px;
+}
+
+.sheet-pages:checked + span.sheet-page-label {
     background-color: black;
     color: white;
 }
 
-.sheet-page-label:hover,
-.sheet-vow-clear-label:hover {
-    cursor: pointer;
+.sheet-pages:hover + .sheet-page-label,
+.sheet-clear-vow:hover + .sheet-vow-clear-label {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
     color: black;
+}
+
+.sheet-page-label:hover,
+.sheet-vow-clear-label:hover {
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: black;
+}
+
+input.sheet-page1 {
+    width: 140px;
+}
+
+span.sheet-page-label-1 {
+    margin-left: -144px;
+    width: 140px;
+}
+
+input.sheet-page2 {
+    width: 75px;
+}
+
+span.sheet-page-label-2 {
+    width: 75px;
+    margin-left: -82px;
+}
+
+input.sheet-page3 {
+    width: 60px;
+}
+
+span.sheet-page-label-3 {
+    margin-left: -64px;
+    width: 60px;
 }
 
 .sheet-vertleft {
