--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -890,6 +890,21 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-perception { height: 25px; }
 .sheet-attribute .sheet-row-perception .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-perception .sheet-col1 input { font-size: 16px; }
+
+.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox {
+    float: left;
+    width: 16px;
+}
+
+.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox input[type=checkbox] {
+    height: 15px;
+}
+
+.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-title {
+    float: left;
+}
+
+
 .sheet-attribute .sheet-row-willpower { height: 25px; }
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
@@ -920,7 +935,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-row .sheet-col1 { width: 35px; }
 .sheet-stats .sheet-row .sheet-col2 { width: 35px; }
 .sheet-stats .sheet-row .sheet-col3 { width: 35px; }
-.sheet-stats .sheet-row-current-points .sheet-col0 { width: 75px; }
+.sheet-stats .sheet-row-current-points .sheet-col0 { height: 24px; }
 .sheet-stats .sheet-row-current-points .sheet-col1 { width: 35px; }
 .sheet-stats .sheet-tooltip table { text-align: left; font-size: 9px; }
 .sheet-stats .sheet-tooltip table .sheet-label { text-align: left; font-size: 9px; }
